change name of dev DB

--- a/config/database.yml
+++ b/config/database.yml
@@ -9,7 +9,7 @@ default: &default
 
 development:
   <<: *default
-  database: FreeDonate_development
+  database: freedonate_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
